# ollama-chat

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/chat/: AccountWidget.tsx  EmptyState.tsx  FileChip.tsx  InputArea.tsx  LightboxModal.tsx  MarkdownMessage.tsx  MessageBubble.tsx  ModelBrowser.tsx  ModelInfoPanel.tsx  ModelSelectorPopover.tsx  SettingsModal.tsx  Sidebar.tsx  SignInModal.tsx  SystemPromptPanel.tsx
src/lib/: cloud-models.ts  file-utils.ts  markdown.ts  model-utils.ts  ollama.ts  time-utils.ts  types.ts
src/pages/: ChatPage.tsx
src/store/: auth-store.ts  chat-store.ts
